# pico-3n

./: API.md  BUILD.md  CMakeLists.txt  DELIVERY_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  FLASHING.md  IO_PIN_CONFIGURATION_REPORT.md  OPTIMIZATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  project_summary.sh  verify_build.sh
.github/workflows/: build-uf2.yml  build.yml
arduino_fx3u_simulator/: README.md  library.properties
arduino_fx3u_simulator/examples/FX3U_Simulator/: FX3U_Simulator.ino
arduino_fx3u_simulator/src/: ethernet_adapter.h  fx3u_core.c  fx3u_instructions.c  fx3u_io.c  fx3u_program.c  fx3u_program.h  memory_manager.c  memory_manager.h  modbus_protocol.h  rs485_driver.c  timer.h
include/: communication.h  fx3u_core.h  fx3u_instructions.h  fx3u_io.h  rs485_driver.h
src/: communication.c  ethernet_adapter.c  fx3u_core.c  fx3u_io.c  main.c  memory_manager.c  modbus_protocol.c  rs485_driver.c  timer.c
